force-app/main/default/objects/License_Registration__c/License_Registration__c.object-meta.xml
<CustomObject>
    <description>This object takes the information about business registrations. It will be linked via lookup to the Account Object.</description>
    <label>Registration</label>
    <nameField>
        <displayFormat>LR-1{000000000}</displayFormat>
        <label>System Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>