force-app/main/default/objects/License_Registration__c/fields/Abestos__c.field-meta.xml
<CustomField>
    <fullName>Abestos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Asbestos</label>
    <type>Checkbox</type>
</CustomField>