force-app/main/default/objects/License_Registration__c/fields/Adjusted_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Expiration_Date__c</fullName>
    <formula>If(
 Calcualted_Expiration_Date__c &lt; Date((Year(Calcualted_Expiration_Date__c )),7,1),
 Date((Year(Calcualted_Expiration_Date__c )-1),6,30), Date((Year(Calcualted_Expiration_Date__c )),6,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Expiration Date</label>
    <type>Date</type>
</CustomField>