force-app/main/default/objects/License_Registration__c/fields/AgentAuthorizationDA__c.field-meta.xml
<CustomField>
    <fullName>AgentAuthorizationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Authorization DA</label>
    <type>Checkbox</type>
</CustomField>