force-app/main/default/objects/License_Registration__c/fields/AgentAuthorizationReviewed__c.field-meta.xml
<CustomField>
    <fullName>AgentAuthorizationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Authorization Reviewed?</label>
    <type>Checkbox</type>
</CustomField>