force-app/main/default/objects/License_Registration__c/fields/AgreementsDA__c.field-meta.xml
<CustomField>
    <fullName>AgreementsDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreements DA</label>
    <type>Checkbox</type>
</CustomField>