force-app/main/default/objects/License_Registration__c/fields/AgreementsReviewed__c.field-meta.xml
<CustomField>
    <fullName>AgreementsReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreements Reviewed?</label>
    <type>Checkbox</type>
</CustomField>