force-app/main/default/objects/License_Registration__c/fields/Amount_Paid_Manually__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Manually__c</fullName>
    <description>Total amount paid by physical check/money order. Populated via DLRS rollup.</description>
    <label>Amount Paid Manually</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>