force-app/main/default/objects/License_Registration__c/fields/Applicant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Agreement__c</fullName>
    <description>Used in Registration forms.</description>
    <formula>&quot;I hereby authorize the Division of Labor Standards Enforcement (DLSE) Licensing &amp; Registration Unit to release information regarding my application to the below listed individuals. (Click &#39;Add Agent&#39; to add individuals.)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Agreement</label>
    <type>Text</type>
</CustomField>