force-app/main/default/objects/License_Registration__c/fields/Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_Time__c</fullName>
    <description>Store Approval Date Time for identifying auto-renewal. This field is to be updated by wfr &quot;REG: Capture Approval DateTime&quot;</description>
    <label>Approval Date Time</label>
    <type>DateTime</type>
</CustomField>