force-app/main/default/objects/License_Registration__c/fields/Asbestos__c.field-meta.xml
<CustomField>
    <fullName>Asbestos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Asbestos</label>
    <type>Checkbox</type>
</CustomField>