force-app/main/default/objects/License_Registration__c/fields/Assigned_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Deputy that is going to process this registration.</inlineHelpText>
    <label>Assigned Deputy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DIR_Employee__c.Position__c</field>
            <operation>equals</operation>
            <value>Registration Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>