force-app/main/default/objects/License_Registration__c/fields/Audit_Number__c.field-meta.xml
<CustomField>
    <fullName>Audit_Number__c</fullName>
    <label>Audit Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>