force-app/main/default/objects/License_Registration__c/fields/Authorization_Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Inclusions__c</fullName>
    <description>Used in Registration forms.</description>
    <formula>&quot;This authorization grants the below designated agent(s) to:&quot; 
&amp;BR()&amp; 
&quot; - obtain verbal information on my behalf from the DLSE Licensing &amp; Registration Unit concerning the status of my application&quot; 
&amp;BR()&amp; 
&quot; - obtain a copy of my defect letters&quot; 
&amp;BR()&amp; 
&quot; - obtain any additional information and/or materials that I specify for each agent&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorization Inclusions</label>
    <type>Text</type>
</CustomField>