force-app/main/default/objects/License_Registration__c/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The process checks this if the Registration was auto renewal</description>
    <label>Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>