force-app/main/default/objects/License_Registration__c/fields/Boilermaker_Blacksmith__c.field-meta.xml
<CustomField>
    <fullName>Boilermaker_Blacksmith__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boilermaker-Blacksmith</label>
    <type>Checkbox</type>
</CustomField>