force-app/main/default/objects/License_Registration__c/fields/Bond_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Bond_Requirements__c</fullName>
    <formula>CASE( License_Registration_Type__c , 
&quot;Car Wash&quot;, &quot;All Car Wash registrations require a bond amount of $150,000.00&quot;,
&quot;Farm Labor&quot;, &quot;FLC bond requirement text&quot;,
&quot;No exams necessary at this time.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bond Requirements</label>
    <type>Text</type>
</CustomField>