force-app/main/default/objects/License_Registration__c/fields/Bricklayer_Brick_Tender__c.field-meta.xml
<CustomField>
    <fullName>Bricklayer_Brick_Tender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Bricklayer/Brick Tender</label>
    <type>Checkbox</type>
</CustomField>