force-app/main/default/objects/License_Registration__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>This field is equivalent to Legal Entity Name, is for CPS.</description>
    <label>Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>