force-app/main/default/objects/License_Registration__c/fields/Calcualted_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Calcualted_Expiration_Date__c</fullName>
    <formula>DATE((Year(Effective_Date__c)+ Number_of_Years_PW__c  ),(Month(Effective_Date__c)),(Day(Effective_Date__c)))</formula>
    <label>Calcualted Expiration Date</label>
    <type>Date</type>
</CustomField>