force-app/main/default/objects/License_Registration__c/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>TextArea</type>
</CustomField>