force-app/main/default/objects/License_Registration__c/fields/CompanyAddressInformationReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddressInformationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Address Information Reviewed?</label>
    <type>Checkbox</type>
</CustomField>