force-app/main/default/objects/License_Registration__c/fields/CompanyContactReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyContactReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Contact Reviewed?</label>
    <type>Checkbox</type>
</CustomField>