force-app/main/default/objects/License_Registration__c/fields/CompanyFinancesCWDocuments__c.field-meta.xml
<CustomField>
    <fullName>CompanyFinancesCWDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Finances - CW Documents</label>
    <type>Checkbox</type>
</CustomField>