force-app/main/default/objects/License_Registration__c/fields/CompanyFinancesDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyFinancesDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Finances DA</label>
    <type>Checkbox</type>
</CustomField>