force-app/main/default/objects/License_Registration__c/fields/CompanyFinancesReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyFinancesReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Finances Reviewed?</label>
    <type>Checkbox</type>
</CustomField>