force-app/main/default/objects/License_Registration__c/fields/CompanyInformationDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyInformationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Information DA</label>
    <type>Checkbox</type>
</CustomField>