force-app/main/default/objects/License_Registration__c/fields/CompanyLocationsDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyLocationsDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Locations DA</label>
    <type>Checkbox</type>
</CustomField>