force-app/main/default/objects/License_Registration__c/fields/CompanyManagersDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyManagersDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Managers DA</label>
    <type>Checkbox</type>
</CustomField>