force-app/main/default/objects/License_Registration__c/fields/CompanyManagersDocuments__c.field-meta.xml
<CustomField>
    <fullName>CompanyManagersDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Managers Documents</label>
    <type>Checkbox</type>
</CustomField>