force-app/main/default/objects/License_Registration__c/fields/CompanyOwnersDocuments__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwnersDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Owners Documents</label>
    <type>Checkbox</type>
</CustomField>