force-app/main/default/objects/License_Registration__c/fields/CompanyOwnersReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwnersReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Owners Reviewed?</label>
    <type>Checkbox</type>
</CustomField>