force-app/main/default/objects/License_Registration__c/fields/CompanyTypeRenewalDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyTypeRenewalDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Type - Renewal DA</label>
    <type>Checkbox</type>
</CustomField>