force-app/main/default/objects/License_Registration__c/fields/CompanyTypeRenewalReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyTypeRenewalReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Type - Renewal Reviewed?</label>
    <type>Checkbox</type>
</CustomField>