force-app/main/default/objects/License_Registration__c/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <inlineHelpText>Date format: mm/dd/yyyy or select the downward arrow to choose a date from the calendar view.</inlineHelpText>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>