force-app/main/default/objects/License_Registration__c/fields/Contractor_Trade_Name_DBA__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Trade_Name_DBA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Trade Name (DBA)</label>
    <referenceTo>DBA__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>