force-app/main/default/objects/License_Registration__c/fields/Crafts__c.field-meta.xml
<CustomField>
    <fullName>Crafts__c</fullName>
    <label>Crafts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>