force-app/main/default/objects/License_Registration__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Time</label>
    <type>DateTime</type>
</CustomField>