force-app/main/default/objects/License_Registration__c/fields/CSLB_Certification__c.field-meta.xml
<CustomField>
    <fullName>CSLB_Certification__c</fullName>
    <description>Public Works</description>
    <label>CSLB Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>