force-app/main/default/objects/License_Registration__c/fields/Date_Formed__c.field-meta.xml
<CustomField>
    <fullName>Date_Formed__c</fullName>
    <inlineHelpText>Date format: mm/dd/yyyy or select the downward arrow to select a date from a calendar view.</inlineHelpText>
    <label>Date Formed</label>
    <type>Date</type>
</CustomField>