force-app/main/default/objects/License_Registration__c/fields/Daytime_Phone__c.field-meta.xml
<CustomField>
    <fullName>Daytime_Phone__c</fullName>
    <inlineHelpText>Phone number must be 10 numbers (no dashes or spaces.)</inlineHelpText>
    <label>Daytime Phone</label>
    <type>Phone</type>
</CustomField>