force-app/main/default/objects/License_Registration__c/fields/Daytime_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Daytime_Phone_Ext__c</fullName>
    <inlineHelpText>If there is an extension #, please enter that here.</inlineHelpText>
    <label>Daytime Phone Ext.</label>
    <length>5</length>
    <type>Text</type>
</CustomField>