force-app/main/default/objects/License_Registration__c/fields/Defect_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Defect_Response_Time__c</fullName>
    <formula>CASE(  RecordType.DeveloperName, 
      &#39;Child_Performer_Services&#39;, &#39;60&#39;,
      &#39;Car_Wash&#39;, &#39;30&#39;,
      &#39;Janitorial&#39;, &#39;30&#39;,
      &#39;Entertainment_Work&#39;, &#39;30&#39;,
      &#39;&#39;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Response Time</label>
    <type>Text</type>
</CustomField>