force-app/main/default/objects/License_Registration__c/fields/DisclaimerDA__c.field-meta.xml
<CustomField>
    <fullName>DisclaimerDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclaimer DA</label>
    <type>Checkbox</type>
</CustomField>