force-app/main/default/objects/License_Registration__c/fields/DisclaimerReviewed__c.field-meta.xml
<CustomField>
    <fullName>DisclaimerReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclaimer Reviewed?</label>
    <type>Checkbox</type>
</CustomField>