force-app/main/default/objects/License_Registration__c/fields/Disqualification_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_End_Date__c</fullName>
    <label>Disqualification End Date</label>
    <type>Date</type>
</CustomField>