force-app/main/default/objects/License_Registration__c/fields/Duplicate_Found_Accept__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Found_Accept__c</fullName>
    <label>Duplicate Found Accept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>