force-app/main/default/objects/License_Registration__c/fields/E_signature_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>E_signature_of_Applicant__c</fullName>
    <description>Used in Release Authorization section of form</description>
    <inlineHelpText>Only the individual owner or a general partner may sign.  If the business is a corporation or limited liability company, an authorized corporate officer or member may sign.  The name entered must match the full name on the individual&#39;s driver&#39;s license.</inlineHelpText>
    <label>E-signature of Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>