force-app/main/default/objects/License_Registration__c/fields/EducationDA__c.field-meta.xml
<CustomField>
    <fullName>EducationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education DA</label>
    <type>Checkbox</type>
</CustomField>