force-app/main/default/objects/License_Registration__c/fields/EducationReviewed__c.field-meta.xml
<CustomField>
    <fullName>EducationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Reviewed?</label>
    <type>Checkbox</type>
</CustomField>