force-app/main/default/objects/License_Registration__c/fields/Electrical_Utility__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Utility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Electrical Utility</label>
    <type>Checkbox</type>
</CustomField>