force-app/main/default/objects/License_Registration__c/fields/Electrician__c.field-meta.xml
<CustomField>
    <fullName>Electrician__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Electrician</label>
    <type>Checkbox</type>
</CustomField>